adding information to a block (o stronie)

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 <div id="kontakt">
 
-<a id="cv" href="./CV_Wiaczesław_Kaliberda.pdf" target=" _blank">CV</a>
+<a id="cv" href="./cv.pdf" target=" _blank">CV</a>
 <p id="adr">Adres mailowy:<a id="mail">slavik.kaliberda2001@gmail.com</a></p></br>
 <a id="lin" target="_blank" href="https://www.linkedin.com/in/viacheslav-kaliberda-bb6832201">profil Linkedln</a>
 </div>
