adding information to a block (o stronie)

--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
 <section class="text_str">
 <h2>W razie jakich kolwiek pytań proszę pisać na maila podanym w bloku<a id="kon" href="#kontakt"> kontakt</a></h2>
 <h2>Storna jest napisana w językach HTML, CSS a tak zwany <a id="kon" href="#pol"> "Kalkulator ramy"</a> jest napisany w JavaScript.</h2>
+<h2>Strona powstała <b id="stro">BEZ POMOCY GRAFIKA</b> dla tego niestety wygląda nie najlepej.<h2> <b id="stro">CELEM PROJEKTA</b>
+     jets pokazać umiejętność pracowania z językami CSS, HTML i JavaScript<h2> a tak że umiejętność pozycjonowania elementów i znajomość z systemem GIT</h2></h2></h2>
 </section>
 
 
@@ -184,7 +186,7 @@
 
 <a id="cv" href="./cv.pdf" target=" _blank">CV</a>
 <p id="adr">Adres mailowy:<a id="mail">slavik.kaliberda2001@gmail.com</a></p></br>
-<a id="lin" target="_blank" href="https://www.linkedin.com/in/viacheslav-kaliberda-bb6832201">profil Linkedln</a>
+<!--<a id="lin" target="_blank" href="https://www.linkedin.com/in/viacheslav-kaliberda-bb6832201">profil Linkedln</a>-->
 </div>
 
 
